# fmcd

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  V0.9.0_MIGRATION_PLAN.md  curl.md  example.env  flake.nix  justfile  justfile.local.just  mprocs-wscat.yaml  mprocs.yaml  release-plz.toml  shell.nix
.config/: semgrep.yaml
.config/flakebox/: id  shellHook.sh
.github/workflows/: README.md  docker-multiarch.yml  docker-publish.yml  flakebox-ci.yml  release-plz.yml  release.yml
fedimint-nwc/src/: nwc.rs
fedimint-nwc/src/services/: multimint.rs
misc/git-hooks/: pre-commit
src/: config.rs  error.rs  error_tests.rs  lib.rs  main.rs  state.rs  state_tests.rs  types.rs
src/api/: mod.rs  websockets.rs
src/api/resolvers/: mod.rs  payment.rs
src/api/rest/admin/: config.rs  federations.rs  info.rs  join.rs  mod.rs  version.rs
src/api/rest/ln/: invoice.rs  mod.rs  pay.rs  status.rs  stream.rs
src/api/rest/mint/: reissue.rs  split.rs
src/api/rest/onchain/: deposit_address.rs  withdraw.rs
src/auth/: basic.rs  hmac.rs  mod.rs
src/core/: mod.rs
src/core/multimint/: client.rs  mod.rs
src/core/operations/: mod.rs
src/core/operations/tests/: mod.rs  payment_tests.rs
src/core/services/: balance_monitor.rs  deposit_monitor.rs  payment_lifecycle.rs
src/database/: instrumented.rs  mod.rs
src/database/tests/: instrumented_tests.rs  mod.rs
src/error/: categories.rs  mod.rs  tests.rs
src/events/: mod.rs
src/events/handlers/: logging.rs  metrics.rs  mod.rs
src/events/tests/: event_bus_tests.rs  mod.rs
src/health/: checks.rs  mod.rs
src/metrics/: collectors.rs
src/multimint/: client.rs  mod.rs  tests.rs
src/observability/: correlation.rs  logging.rs  mod.rs  sanitization.rs  test_integration.rs
src/observability/tests/: correlation_tests.rs  logging_tests.rs  mod.rs
src/operations/: mod.rs  payment.rs
src/router/: ws.rs
src/router/handlers/admin/: mod.rs  (+11 more)
src/services/: balance_monitor.rs  deposit_monitor.rs  mod.rs  payment_lifecycle.rs
src/webhooks/: invoice.rs  mod.rs  notifier.rs
src/webhooks/tests/: invoice_tests.rs  mod.rs  notifier_tests.rs
tests/: auth_tests.rs  config_tests.rs
tests/common/: mod.rs
tests/integration/: api_test.rs  event_coverage_test.rs  mod.rs  phase2_observability_tests.rs  websocket_test.rs
(+23 files in other folders)
